# mixed-precision-iterative-refinement-gpu

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml  pages.yml
docs/: Gemfile  _config.yml  benchmark_experiment_documentation.md  cuda_solver_implementation_documentation.md  index.md  mixed_precision_solver_documentation.md
docs/_includes/: custom-head.html  head-custom.html  head.html
docs/_layouts/: defailt.html  default.html
docs/notebooks/: nvcc.ipynb
include/: solver.h
python/: aggregate_full.py  aggregate_results.py  baseline.py  gpu_wrapper.py  plot_full.py  plot_results.py  plots.py  run_experiments.py  run_full_experiments.py
results/: baseline_results.csv  benchmarks.csv  full_results.csv  summary_baseline_results.csv
src/: main.cu  refinement.cu  solver.cu  utils.cu
tests/: test_gpu_solve.cpp  test_refinement.cpp
tests/python/: test_binding.py
